[gd_scene load_steps=3 format=3 uid="uid://biy2iv78iall4"]

[ext_resource type="Script" uid="uid://cygm7rkl3xqjr" path="res://ui/CardManager.gd" id="1"]
[ext_resource type="Theme" uid="uid://4v4y5u4fr565" path="res://ui/fantasy_theme.tres" id="2"]

[node name="CardManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer"]
layout_mode = 2

[node name="LeftSection" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Icon" type="Label" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/LeftSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "◆"

[node name="Title" type="Label" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/LeftSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CARD MANAGER v2.1"

[node name="Spacer" type="Control" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonGroup" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HelpButton" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/ButtonGroup"]
unique_name_in_owner = true
layout_mode = 2
text = "HELP"

[node name="ExitButton" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/ButtonGroup"]
unique_name_in_owner = true
layout_mode = 2
text = "EXIT"

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="FilterPanel" type="PanelContainer" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/FilterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FilterHeader" type="PanelContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/FilterHeader"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/FilterHeader/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "⚙ FILTERS & SORTING"

[node name="RaritySection" type="VBoxContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "RARITY"

[node name="CommonCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
button_pressed = true
text = "COMMON"

[node name="UncommonCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
button_pressed = true
text = "UNCOMMON"

[node name="RareCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
button_pressed = true
text = "RARE"

[node name="EpicCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
button_pressed = true
text = "EPIC"

[node name="LegendaryCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/RaritySection"]
layout_mode = 2
button_pressed = true
text = "LEGENDARY"

[node name="TypeSection" type="VBoxContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/TypeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "CARD TYPE"

[node name="CreatureCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/TypeSection"]
layout_mode = 2
button_pressed = true
text = "CREATURE"

[node name="SpellCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/TypeSection"]
layout_mode = 2
button_pressed = true
text = "SPELL"

[node name="ArtifactCheck" type="CheckBox" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/TypeSection"]
layout_mode = 2
button_pressed = true
text = "ARTIFACT"

[node name="SortSection" type="VBoxContainer" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/SortSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SORT BY"

[node name="SortOption" type="OptionButton" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer/SortSection"]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="VBoxContainer/MainContainer/FilterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "↻ RESET FILTERS"

[node name="CardShelfSection" type="PanelContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/CardShelfSection"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ShelfHeader" type="PanelContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfHeader"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfHeader/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CARD COLLECTION SHELF"
horizontal_alignment = 1

[node name="ShelfControl" type="Control" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardShelf" type="HBoxContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfControl/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="ScrollLeftButton" type="Button" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
text = "◀"

[node name="ScrollRightButton" type="Button" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ShelfControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_right = -8.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "▶"

[node name="ControlButtons" type="HBoxContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="AutoScrollButton" type="Button" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ControlButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "▶ AUTO SCROLL"

[node name="ShuffleButton" type="Button" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/ControlButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "⚄ SHUFFLE"

[node name="StatsLabel" type="PanelContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/StatsLabel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TotalCardsLabel" type="Label" parent="VBoxContainer/MainContainer/CardShelfSection/MarginContainer/VBoxContainer/StatsLabel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TOTAL CARDS: 0 | SHOWING: 0-0"

[node name="DetailsPanel" type="PanelContainer" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="DetailsHeader" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DetailsHeader"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DetailsHeader/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ⓘ CARD DETAILS"

[node name="CardPreview" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CardPreviewTexture" type="TextureRect" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="CardPreviewName" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SELECT A CARD"
horizontal_alignment = 1

[node name="StatsSection" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="VersionLabel" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "VERSION: -"

[node name="CreatorLabel" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "CREATOR: -"

[node name="TagsLabel" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CardPreview/MarginContainer/VBoxContainer/StatsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TAGS: -"
autowrap_mode = 2

[node name="DeckBuilder" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DeckHeader" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckHeader"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckHeader/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "DECK BUILDER"

[node name="DeckList" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Item1" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Fire Bolt x2"

[node name="Item2" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ice Shard x3"

[node name="Item3" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Lightning Strike x1"

[node name="Item4" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/DeckList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Healing Potion x4"

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddButton" type="Button" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "ADD"

[node name="RemoveButton" type="Button" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/DeckBuilder/MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "REMOVE"

[node name="CollectionStats" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsHeader" type="PanelContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsHeader"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsHeader/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "COLLECTION STATS"

[node name="StatsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Commons" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "COMMONS: 847"

[node name="Uncommons" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "UNCOMMONS: 234"

[node name="Rares" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "RARES: 89"

[node name="Epics" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "EPICS: 45"

[node name="Legendaries" type="Label" parent="VBoxContainer/MainContainer/DetailsPanel/MarginContainer/ScrollContainer/VBoxContainer/CollectionStats/MarginContainer/VBoxContainer/StatsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LEGENDARIES: 32"
